--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
     "access": "public"
   },
   "sideEffects": false,
-  "dependencies": {},
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@types/chai": "^4.3.4",
     "@types/mocha": "^10.0.1",
+    "@types/seedrandom": "^3.0.8",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
     "chai": "^4.3.7",
@@ -47,6 +47,7 @@
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "prettier": "^2.8.4",
+    "seedrandom": "^3.0.5",
     "ts-node": "^10.9.1",
     "typedoc": "^0.25.3",
     "typescript": "^4.9.5"
