--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@types/chai": "^4.3.4",
+    "@types/mathjs": "^9.4.2",
     "@types/mocha": "^10.0.1",
     "@types/seedrandom": "^3.0.8",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
@@ -43,6 +44,7 @@
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "^2.27.5",
+    "mathjs": "^12.3.2",
     "mocha": "^10.2.0",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
@@ -66,6 +68,7 @@
     "fix": "npm-run-all fix:*",
     "fix:format": "prettier --write .",
     "docs": "typedoc --options typedoc.json src/index.ts",
+    "benchmarks": "cross-env TS_NODE_PROJECT='./tsconfig.dev.json' node -r ts-node/register --expose-gc --enable-source-maps benchmarks/main.ts",
     "clean": "rm -rf build docs coverage .nyc_output"
   }
 }
