--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "rle-sparse-array",
+  "name": "sparse-array-rled",
   "version": "0.1.0",
   "description": "Sparse array with run-length encoded deletions",
   "author": "Matthew Weidner",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/mweidner037/rle-sparse-array/issues"
+    "url": "https://github.com/mweidner037/sparse-array-rled/issues"
   },
-  "homepage": "https://github.com/mweidner037/rle-sparse-array/#readme",
+  "homepage": "https://github.com/mweidner037/sparse-array-rled/#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mweidner037/rle-sparse-array.git"
+    "url": "git+https://github.com/mweidner037/sparse-array-rled.git"
   },
   "keywords": [
     "sparse array",
