--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sparse-array-rled",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Sparse array with run-length encoded deletions",
   "author": "Matthew Weidner",
   "license": "MIT",
@@ -32,6 +32,7 @@
     "access": "public"
   },
   "sideEffects": false,
+  "dependencies": {},
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@types/chai": "^4.3.4",
