--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sparse-array-rled",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "Sparse array with run-length encoded deletions",
   "author": "Matthew Weidner",
   "license": "MIT",
@@ -32,6 +32,7 @@
     "access": "public"
   },
   "sideEffects": false,
+  "dependencies": {},
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@types/chai": "^4.3.4",
@@ -45,7 +46,6 @@
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "^2.27.5",
-    "list-positions": "^0.3.3",
     "mathjs": "^12.3.2",
     "mocha": "^10.2.0",
     "npm-run-all": "^4.1.5",
